--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-interactive-game",
+  "homepage": "https://github.com/laurelherting/react-interactive-game.git",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,15 +9,14 @@
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.11"
   },
+  "devDependencies": {
+    "gh-pages": "^1.0.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "deploy": "npm run build&&gh-pages -d build"
-  },
-  "homepage": "https://github.com/laurelherting/react-interactive-game.git",
-  "devDependencies": {
-    "gh-pages": "^1.0.0"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
